--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -7,7 +7,9 @@
     <title>DevSecOps Security Dashboard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Fira+Code:wght@400;500&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -29,17 +31,41 @@
 
             <div class="nav-links">
                 <button class="nav-btn active" onclick="navigateTo('overview')">
-                    <span class="icon">📊</span> Overview
+                    <span class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M3.75 6A2.25 2.25 0 016 3.75h2.25A2.25 2.25 0 0110.5 6v2.25a2.25 2.25 0 01-2.25 2.25H6a2.25 2.25 0 01-2.25-2.25V6zM3.75 15.75A2.25 2.25 0 016 13.5h2.25a2.25 2.25 0 012.25 2.25V18a2.25 2.25 0 01-2.25 2.25H6A2.25 2.25 0 013.75 18v-2.25zM13.5 6a2.25 2.25 0 012.25-2.25H18A2.25 2.25 0 0120.25 6v2.25A2.25 2.25 0 0118 10.5h-2.25a2.25 2.25 0 01-2.25-2.25V6zM13.5 15.75a2.25 2.25 0 012.25-2.25H18a2.25 2.25 0 012.25 2.25V18A2.25 2.25 0 0118 20.25h-2.25A2.25 2.25 0 0113.5 18v-2.25z" />
+                        </svg>
+                    </span> Overview
                 </button>
                 <div class="nav-group-title">Analysis</div>
                 <button class="nav-btn" onclick="navigateTo('sast')">
-                    <span class="icon">🔍</span> SAST (Code)
+                    <span class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M17.25 6.75L22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3l-4.5 16.5" />
+                        </svg>
+                    </span> SAST (Code)
                 </button>
                 <button class="nav-btn" onclick="navigateTo('sca-fs')">
-                    <span class="icon">📦</span> SCA (Repo)
+                    <span class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M20.25 7.5l-.625 10.632a2.25 2.25 0 01-2.247 2.118H6.622a2.25 2.25 0 01-2.247-2.118L3.75 7.5M10 11.25h4M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125z" />
+                        </svg>
+                    </span> SCA (Repo)
                 </button>
                 <button class="nav-btn" onclick="navigateTo('sca-image')">
-                    <span class="icon">🐳</span> SCA (Image)
+                    <span class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M21 7.5l-9-5.25L3 7.5m18 0l-9 5.25m9-5.25v9l-9 5.25M3 7.5l9 5.25M3 7.5v9l9 5.25m0-9v9" />
+                        </svg>
+                    </span> SCA (Image)
                 </button>
             </div>
 
@@ -58,7 +84,7 @@
                 <div class="top-actions">
                     <button class="btn-secondary" onclick="exportData()">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-4 h-4">
+                            stroke="currentColor" class="w-4 h-4" style="width: 18px; height: 18px;">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5M16.5 12L12 16.5m0 0L7.5 12m4.5 4.5V3" />
                         </svg>
@@ -118,6 +144,7 @@
                 <!-- SAST View -->
                 <div id="sast-view" class="view-section">
                     <div class="table-header">
+                        <h2>Code Vulnerabilities</h2>
                         <div class="table-actions">
                             <select class="filter-select" onchange="applyFilters('sast')">
                                 <option value="">All Severities</option>
@@ -129,35 +156,24 @@
                             <input type="text" placeholder="Search findings..." class="search-input"
                                 onkeyup="applyFilters('sast')">
                             <label class="toggle-switch">
+                                <span class="label-text">Show Dismissed</span>
                                 <input type="checkbox" id="show-dismissed-sast" onchange="toggleDismissed('sast')">
                                 <span class="slider"></span>
-                                <span class="label-text">Show Dismissed</span>
                             </label>
                         </div>
                     </div>
-                    <div class="table-responsive">
-                        <table id="sast-table">
-                            <thead>
-                                <tr>
-                                    <th><input type="checkbox" onchange="toggleSelectAll('sast')"></th>
-                                    <th class="sortable" onclick="sortData('sast', 'severity')">Severity ↕</th>
-                                    <th class="sortable" onclick="sortData('sast', 'category')">Rule Type ↕</th>
-                                    <th class="sortable" onclick="sortData('sast', 'id')">ID / Rule ↕</th>
-                                    <th>Message</th>
-                                    <th>CWE/OWASP</th>
-                                    <th>Location</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody id="sast-tbody"></tbody>
-                        </table>
+
+                    <div id="sast-list" class="vuln-list">
+                        <!-- Populated by JS -->
                     </div>
+
                     <div class="pagination-controls" id="sast-pagination"></div>
                 </div>
 
                 <!-- SCA FS View -->
                 <div id="sca-fs-view" class="view-section">
                     <div class="table-header">
+                        <h2>Repository Dependencies</h2>
                         <div class="table-actions">
                             <select class="filter-select" onchange="applyFilters('scaFs')">
                                 <option value="">All Severities</option>
@@ -166,31 +182,22 @@
                                 <option value="MEDIUM">Medium</option>
                                 <option value="LOW">Low</option>
                             </select>
-                            <input type="text" placeholder="Search findings..." class="search-input"
+                            <input type="text" placeholder="Search packages..." class="search-input"
                                 onkeyup="applyFilters('scaFs')">
                         </div>
                     </div>
-                    <div class="table-responsive">
-                        <table id="sca-fs-table">
-                            <thead>
-                                <tr>
-                                    <th><input type="checkbox" onchange="toggleSelectAll('scaFs')"></th>
-                                    <th class="sortable" onclick="sortData('scaFs', 'severity')">Highest Severity ↕</th>
-                                    <th class="sortable" onclick="sortData('scaFs', 'package')">Package ↕</th>
-                                    <th>Installed Version</th>
-                                    <th>Vulnerabilities</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody id="sca-fs-tbody"></tbody>
-                        </table>
+
+                    <div id="sca-fs-list" class="vuln-list">
+                        <!-- Populated by JS -->
                     </div>
+
                     <div class="pagination-controls" id="sca-fs-pagination"></div>
                 </div>
 
                 <!-- SCA Image View -->
                 <div id="sca-image-view" class="view-section">
                     <div class="table-header">
+                        <h2>Container Image Vulnerabilities</h2>
                         <div class="table-actions">
                             <select class="filter-select" onchange="applyFilters('scaImage')">
                                 <option value="">All Severities</option>
@@ -199,26 +206,15 @@
                                 <option value="MEDIUM">Medium</option>
                                 <option value="LOW">Low</option>
                             </select>
-                            <input type="text" placeholder="Search findings..." class="search-input"
+                            <input type="text" placeholder="Search packages..." class="search-input"
                                 onkeyup="applyFilters('scaImage')">
                         </div>
                     </div>
-                    <div class="table-responsive">
-                        <table id="sca-image-table">
-                            <thead>
-                                <tr>
-                                    <th><input type="checkbox" onchange="toggleSelectAll('scaImage')"></th>
-                                    <th class="sortable" onclick="sortData('scaImage', 'severity')">Highest Severity ↕
-                                    </th>
-                                    <th class="sortable" onclick="sortData('scaImage', 'package')">Package ↕</th>
-                                    <th>Installed Version</th>
-                                    <th>Vulnerabilities</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody id="sca-image-tbody"></tbody>
-                        </table>
+
+                    <div id="sca-image-list" class="vuln-list">
+                        <!-- Populated by JS -->
                     </div>
+
                     <div class="pagination-controls" id="sca-image-pagination"></div>
                 </div>
 
