--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -114,6 +114,65 @@
                             <button class="toggle-btn" onclick="filterOverview('SCA', this)">SCA</button>
                         </div>
                     </div>
+                    <!-- USP: Differentiated Metrics -->
+                    <section class="usp-grid"
+                        style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 24px;">
+                        <!-- Security Grade Card -->
+                        <div class="card usp-card grade-card"
+                            style="background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); position: relative; overflow: hidden;">
+                            <div class="card-content"
+                                style="position: relative; z-index: 2; display: flex; justify-content: space-between; align-items: center;">
+                                <div>
+                                    <h3
+                                        style="color: #94a3b8; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 0.05em; margin-bottom: 8px;">
+                                        Security Grade</h3>
+                                    <div id="security-grade"
+                                        style="font-size: 3.5rem; font-weight: 900; background: linear-gradient(to right, #4ade80, #22c55e); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-shadow: 0 4px 12px rgba(34, 197, 94, 0.2);">
+                                        A</div>
+                                    <div id="security-status"
+                                        style="color: #cbd5e1; font-size: 0.9rem; margin-top: 4px;">Excellent Standing
+                                    </div>
+                                </div>
+                                <div class="grade-icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="#22c55e"
+                                        style="width: 64px; height: 64px; opacity: 0.8;">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M9 12.75L11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 01-1.043 3.296 3.745 3.745 0 01-3.296 1.043A3.745 3.745 0 0112 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 01-3.296-1.043 3.745 3.745 0 01-1.043-3.296A3.745 3.745 0 013 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 011.043-3.296 3.746 3.746 0 013.296-1.043A3.746 3.746 0 0112 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 013.296 1.043 3.746 3.746 0 011.043 3.296A3.745 3.745 0 0121 12z" />
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="glow-effect"
+                                style="position: absolute; top: 0; right: 0; width: 150px; height: 150px; background: radial-gradient(circle, rgba(34, 197, 94, 0.15) 0%, rgba(0,0,0,0) 70%);">
+                            </div>
+                        </div>
+
+                        <!-- Financial Risk Card -->
+                        <div class="card usp-card risk-card"
+                            style="background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); position: relative; overflow: hidden;">
+                            <div class="card-content"
+                                style="position: relative; z-index: 2; display: flex; justify-content: space-between; align-items: center;">
+                                <div>
+                                    <h3
+                                        style="color: #94a3b8; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 0.05em; margin-bottom: 8px;">
+                                        Est. Financial Exposure</h3>
+                                    <div id="financial-risk"
+                                        style="font-size: 3.5rem; font-weight: 900; color: #f8fafc;">$0</div>
+                                    <div style="color: #64748b; font-size: 0.8rem; margin-top: 4px;">Based on avg.
+                                        breach cost per vuln.</div>
+                                </div>
+                                <div class="risk-icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="#38bdf8"
+                                        style="width: 64px; height: 64px; opacity: 0.8;">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M12 6v12m-3-2.818l.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
                     <section class="summary-grid">
                         <div class="card summary-card total-vulns">
                             <h3>Total Vulnerabilities</h3>
